# BananaPersist

./: .gitignore  LICENSE  README.md  meson.build  meson_options.txt
docs/: banana_tree_conventions.md  generators.md
ext/persistence1d/: persistence1d.hpp
src/: persistence_defs.h
src/algorithms/: banana_tree_algorithms.h
src/app/experiments/: ex_construction.cpp  ex_local_maintenance.cpp  ex_sliding_window.cpp  ex_time_series.cpp  ex_topological_maintenance.cpp  generate_data.cpp  sliding_window_local.h  sliding_window_topological.h
src/app/experiments/utility/: cli_options.h  cli_validators.h  data_generation.h
src/datastructure/: banana_tree.cpp  banana_tree.h  banana_tree_construction.cpp  banana_tree_iterators.cpp  banana_tree_local_operations.cpp  banana_tree_sign_template.h  banana_tree_topological_operations.cpp  banana_tree_validation.h  dictionary.h  interval.cpp  interval.h  list_item.cpp  list_item.h  persistence_context.cpp  persistence_context.h  persistence_diagram.cpp  persistence_diagram.h
src/utility/: debug.h  errors.cpp  errors.h  format_util.h  iterator.h  random.h  recycling_object_pool.h  stats.cpp  stats.h  timer.h  types.h
test/: analysis_test.cpp  banana_tree_construction_test.cpp  banana_tree_iteration_test.cpp  interval_test.cpp  list_item_test.cpp  local_operation_test.cpp  persistence_diagram_test.cpp  random_instance_test.cpp  search_tree_test.cpp  topological_operation_test.cpp  validation.h
test/example_trees/: paper_tree.h
tools/: convert-to-csv.py  structure-convert-to-csv.py
